fix(list-item): hide headline overflow and fix width.

--- a/list/internal/listitem/_list-item.scss
+++ b/list/internal/listitem/_list-item.scss
@@ -84,6 +84,7 @@
     outline: none;
     // hide android tap color since we have ripple
     -webkit-tap-highlight-color: transparent;
+    width: 100%;
   }
 
   .list-item.interactive {
